@@ -1,6 +1,8 @@
 package de.tukl.cs.softech.agilereview.export;
 
+import java.io.FilenameFilter;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
@@ -8,6 +10,7 @@ import java.util.Arrays;
 import java.util.Calendar;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeSet;
@@ -19,6 +22,10 @@ import net.sf.jxls.transformer.XLSTransformer;
 import org.apache.poi.openxml4j.exceptions.InvalidFormatException;
 import org.eclipse.core.resources.IWorkspaceRoot;
 import org.eclipse.core.resources.ResourcesPlugin;
+import org.eclipse.core.runtime.IProgressMonitor;
+import org.eclipse.jface.dialogs.MessageDialog;
+import org.eclipse.jface.operation.IRunnableWithProgress;
+import org.eclipse.ui.PlatformUI;
 
 import agileReview.softech.tukl.de.CommentDocument.Comment;
 import agileReview.softech.tukl.de.FileDocument.File;
@@ -26,12 +33,13 @@ import agileReview.softech.tukl.de.FolderDocument.Folder;
 import agileReview.softech.tukl.de.ProjectDocument.Project;
 import agileReview.softech.tukl.de.ReviewDocument.Review;
 import de.tukl.cs.softech.agilereview.dataaccess.ReviewAccess;
+import de.tukl.cs.softech.agilereview.tools.PluginLogger;
 import de.tukl.cs.softech.agilereview.tools.PropertiesManager;
 
 /**
  * This class represents the interface to jxls for exporting reviews and comments to xls, xlsx sheets
  */
-public class XSLExport {
+public class XSLExport implements IRunnableWithProgress {
 
 	/**
 	 * Instance of ReviewAccess
@@ -43,17 +51,63 @@ public class XSLExport {
 	private static PropertiesManager pm = PropertiesManager.getInstance();
 	
 	/**
-	 * This function provides the functionality for exporting the given Reviews to the outputPath by using the xls/xlsx template
-	 * specified in the templatePath
+	 * Reviews to be exported
+	 */
+	private List<Review> reviews;
+	/**
+	 * Template path where the xls template can be found
+	 */
+	private String templatePath;
+	/**
+	 * Output path where the new instance of the exported template should be stored
+	 */
+	private String outputPath;
+	
+	/**
+	 * Creates a new Instance of XSLExport for a list of reviews, the templatePath where
+	 * the export class can find the xls template to be used and the outputPath where the new
+	 * instance of the exported template should be stored
 	 * @param reviews which should be exported
 	 * @param templatePath path to the xls/xlsx template
 	 * @param outputPath directory to which the data should exported
+	 */
+	public XSLExport(List<Review> reviews, String templatePath, String outputPath) {
+		this.reviews = reviews;
+		this.templatePath = templatePath;
+		this.outputPath = outputPath;
+	}
+	
+	/**
+	 * Starts the export process for the attributes with which this class was instantiated
+	 * @see org.eclipse.jface.operation.IRunnableWithProgress#run(org.eclipse.core.runtime.IProgressMonitor)
+	 */
+	@Override
+	public void run(IProgressMonitor monitor) throws InvocationTargetException,	InterruptedException {
+		try {
+			exportReviews(monitor);
+		} catch (ParsePropertyException e) {
+			PluginLogger.logError(this.getClass().toString(),"run", "ParsePropertyException", e);
+			MessageDialog.openError(PlatformUI.getWorkbench().getActiveWorkbenchWindow().getShell(), "Error while exporting Reviews", "The formulas in the selected template file cannot be evaluated correctly");
+		} catch (InvalidFormatException e) {
+			PluginLogger.logError(this.getClass().toString(),"run", "InvalidFormatException", e);
+			MessageDialog.openError(PlatformUI.getWorkbench().getActiveWorkbenchWindow().getShell(), "Error while exporting Reviews", "An error occured while exporting the selected Reviews!");
+		} catch (IOException e) {
+			PluginLogger.logError(this.getClass().toString(),"run", "IOException", e);
+			MessageDialog.openError(PlatformUI.getWorkbench().getActiveWorkbenchWindow().getShell(), "Error while exporting Reviews", "One of the selected files could not be read or written!");
+		}
+	}
+	
+	/**
+	 * This function provides the functionality for exporting the given Reviews to the outputPath by using the xls/xlsx template
+	 * specified in the templatePath
+	 * @param monitor 
 	 * @throws ParsePropertyException occurs during the transfomation process of jxls
 	 * @throws InvalidFormatException occurs during the transfomation process of jxls
 	 * @throws IOException occurs during the transfomation process of jxls
 	 */
-	public static void exportReviews(List<Review> reviews, String templatePath, String outputPath) throws ParsePropertyException, InvalidFormatException, IOException {
-		
+	private void exportReviews(IProgressMonitor monitor) throws ParsePropertyException, InvalidFormatException, IOException {
+		monitor.beginTask("Performing export: ", IProgressMonitor.UNKNOWN);
+		monitor.subTask("Collecting review data...");
 		Map<String, Object> beans = new HashMap<String, Object>();
 		
 		//collect all comments
@@ -100,7 +154,9 @@ public class XSLExport {
         	outputPath += System.getProperty("file.separator");
         }
         
+        monitor.subTask("Creating export sheet...");
 		transformer.transformXLS(templatePath, beans, outputPath+"agilereview_export_"+df.format(Calendar.getInstance().getTime())+filetype);
+		monitor.done();
 	}
 	
 	/**
@@ -113,7 +169,15 @@ public class XSLExport {
 	private static ArrayList<FileExportWrapper> getAllWrappedFiles(Folder folder, String review, String project) {
 		ArrayList<FileExportWrapper> files = new ArrayList<FileExportWrapper>();
 		
-		files.addAll(convertFilesToWrappedFiles(Arrays.asList(folder.getFileArray()), review, project));
+		TreeSet<String> omittings = new TreeSet<String>(Arrays.asList(pm.getInternalProperty(PropertiesManager.INTERNAL_KEYS.EXPORT_OMITTINGS).split(",")));
+		LinkedList<File> uimlFiles = new LinkedList<File>();
+		for(File f : Arrays.asList(folder.getFileArray())) {
+			if(!omittings.contains(f.getName())) {
+				uimlFiles.add(f);
+			}
+		}
+		
+		files.addAll(convertFilesToWrappedFiles(uimlFiles, review, project));
 		for(Folder f : folder.getFolderArray()) {
 			files.addAll(getAllWrappedFiles(f, review, project));
 		}
@@ -130,15 +194,23 @@ public class XSLExport {
 	private static ArrayList<FileExportWrapper> getAllWrappedFiles(java.io.File file, String project) {
 		ArrayList<FileExportWrapper> files = new ArrayList<FileExportWrapper>();
 		
-		TreeSet<String> omittings = new TreeSet<String>(Arrays.asList(pm.getInternalProperty(PropertiesManager.INTERNAL_KEYS.EXPORT_OMITTINGS).split(",")));
-		java.io.File[] fs = file.listFiles();
-		for(java.io.File f : fs) {
-			if(!omittings.contains(f.getName())) {
-				if(f.isFile()) {
-					files.add(new FileExportWrapper(f, project));
-				} else if(f.isDirectory()) {
-					files.addAll(getAllWrappedFiles(f, project));
+		final TreeSet<String> omittings = new TreeSet<String>(Arrays.asList(pm.getInternalProperty(PropertiesManager.INTERNAL_KEYS.EXPORT_OMITTINGS).split(",")));
+		java.io.File[] fs = file.listFiles(new FilenameFilter() {
+			@Override
+			public boolean accept(java.io.File arg0, String arg1) {
+				if(omittings.contains(arg0.getName())) {
+					return false;
+				} else {
+					return true;
 				}
+			}
+		});
+		
+		for(java.io.File f : fs) {
+			if(f.isFile()) {
+				files.add(new FileExportWrapper(f, project));
+			} else if(f.isDirectory()) {
+				files.addAll(getAllWrappedFiles(f, project));
 			}
 		}
 		
